TestSuite/errors/err0113.pas
type TRec = record
a : System.AppDomain;
end;

type TRec2 = record
arr : TRec;
end;

var p : ^TRec2;
begin

end.